# IC_LabWork3

./: 40-Matt-3.txt  66rev-20-not-latin.txt  CMakeLists.txt  README.md  a.txt  fcm.cpp  findlang.cpp  lang.cpp  locatelang.cpp  model_40-Matt-3.txt  model_a.txt  text_en.txt  text_gk.txt  text_pt.txt  text_sp.txt
